--- a/apps/admin/src/index.html
+++ b/apps/admin/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <katalina.dev-root></katalina.dev-root>
+    <katalina-dev-root></katalina-dev-root>
   </body>
 </html>
